--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
 }
 .top{
     display: none;
-    background: rgb(81, 255, 182);
+    background: #066488;
     color: #fff;
     padding: 5px 10px;
     font-size: 22px;
@@ -26,10 +26,26 @@ p.lead {
     font-size: 16px;
     line-height: 30px;
     font-weight: normal;
+    padding-bottom: : 80px;
 }
 .justify-content {
     text-align: justify;
 }
+
+
+.col-sm-5 {
+    width: 41.66666667%;
+    padding-top: 85px;
+    padding-bottom: 50px;
+
+}
+
+#banner{
+    background: url(../img/background.jpg);
+    background-size: cover;
+    position: relative;
+}
+
  .feature-divider .store-link {
     display: none;
     padding: 10px;
@@ -41,7 +57,17 @@ p.lead {
     transition: 2s;
 }
 .top:hover{
-    background: rgb(87, 160, 255);
+    background: #066488;
+}
+
+@media screen and (max-height: 1500px) {
+.resize{
+    width: 300px;
+    position: absolute;
+    left: 750px;
+    height: auto;
+    top: 185px;
+}
 }
 h1{
 	font-weight: 300;
@@ -198,7 +224,7 @@ HH				Header
 HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 .header{
 	height: 865px;
-	background: #0c785b;
+	background: #066488;
     opacity: 0.8;
     padding: 45px 0px;
 
@@ -270,7 +296,11 @@ a#logo:hover{
       box-shadow: 0px 0px 10px #39c;
 }
 .starting img{
-	margin-top: 110px;
+	margin-top: 50px;
+    width: 300px;
+    height: auto;
+    position: absolute;
+    right: 181px;
 }
 .banner-text{
     margin-top: 100px;
@@ -468,9 +498,10 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
     color: #333;
 }
 #team img{
-    width: 200px;
+    width: 225px;
     margin-bottom: 20px;
     position: relative;
+    right: 10%;
     display: block;
     margin: 0px auto;
 }
@@ -531,7 +562,7 @@ ul.social-icon li a {
 HH 				Testimonial
 HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 #testimonial{
-	background: linear-gradient(50deg, rgb(81, 255, 182), rgb(87, 160, 255));
+	background: linear-gradient(50deg, rgb(44, 43, 84), rgb(0 ,101,139));
     color: white;
     padding: 100px 0px;
     /*position: relative;*/
@@ -829,12 +860,12 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 
 .title-under-line-top{
     width: 100px;
-    border-top:1px solid #15cc9a;
+    border-top:1px solid #066488;
     margin-bottom: 0px;
 }
 .title-under-line-bottom{
     width: 80px;
-    border-top:1px solid #15cc9a;
+    border-top:1px solid #066488;
     margin-top: 5px;
 }
 
@@ -847,7 +878,7 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
     
 }
 .card-content h3{
-    color#313131;
+    color: #313131;
     font-size: 15px;
     text-transform: capitalize;
 }
@@ -879,7 +910,7 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 .card-icon-box-inner{
     width:100%;
     height:100%; 
-    background-color:#15cc9a;
+    background-color: #005b83;
     position:relative;
     display:table;
     border-radius: 50%;
@@ -900,8 +931,11 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 /////////////////////////////////////////////////////////////////////*/
 
 #team{
-    padding-top: 150px;
-    padding-bottom: 140px;
+    padding-top: 85px;
+    padding-bottom: 85px;
+}
+.img-res{
+    width: 100%;
 }
 .border-img {
     position:relative;
@@ -958,14 +992,26 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
     border-radius:50%;
     transition:0.5s ease all;
 }
+
+.ion-social-facebook:before{
+    content: "\f231";
+}
+
+.ion-social-linkedin:before {
+    content: "\f239";
+}
+
 .facebook a i {
-    color:#fff;
+    color:white;
     border-color:#3B5998;
 }
 .facebook a i:hover {
     color:#fff;
     background-color:#3B5998;
 }
+
+
+
 .twitter a i {
     color:#fff;
     border-color:#41A1E1;
@@ -1016,7 +1062,7 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 }
 .developer-card{
     margin: 15px;
-    background-color: #15cc9a;
+    background-color: #066488;
     color: #fff;
     transition-duration: 0.5s;
 }
@@ -1039,9 +1085,6 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 }
 .developer-area-wraper{
     padding-top: 80px;
-}
-.img-res{
-    width: 100%;
 }
 
 /* ///////////////////////////////////////////////////////////////////// 
@@ -1143,7 +1186,7 @@ box-shadow:none !important;
 #contact {
     position:relative;
     background-color: #f3f3f3;
-    padding-top: 145px;
+    padding-top: 100px;
     padding-bottom: 135px;
 }
 .contact-wrap {
@@ -1206,3 +1249,4 @@ input:-moz-placeholder,textarea:-moz-placeholder {
     height: auto; }
   .screen-carousel-1 {
     margin: 0; } 
+
